# account-financial-reporting

./: .copier-answers.yml  .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  README.md  __manifest__.py  __openerp__.py  oca_dependencies.txt  requirements.txt  test-requirements.txt
account_bank_reconciliation_summary_xlsx/: README.rst  __manifest__.py
account_bank_statement_line_reconciliation/: README.rst  __init__.py  __manifest__.py
account_chart_report/: README.rst  __init__.py  __manifest__.py  __openerp__.py  account_report.xml
account_chart_report_rml/: account_report.xml
account_debtor_card/: README.rst  __openerp__.py
account_entries_report_analytic_plan/: README.rst  __openerp__.py
account_entries_report_hooks/: README.rst  __init__.py  __openerp__.py
account_export_csv/: README.rst  __init__.py  __manifest__.py  __openerp__.py  menu.xml
account_financial_report/: README.rst  __init__.py  __manifest__.py  __openerp__.py  menuitems.xml  reports.xml
account_financial_report_compressed/: __init__.py  __openerp__.py  report.xml
account_financial_report_date_range/: README.rst  __manifest__.py
account_financial_report_horizontal/: README.rst  __init__.py  __manifest__.py  __openerp__.py  account_report.xml  menu.xml
account_financial_report_partner_name_history/: README.rst  __init__.py  __manifest__.py
account_financial_report_qweb/: README.rst  __init__.py  __manifest__.py  __openerp__.py  menuitems.xml  report_menus.xml  reports.xml
i18n/: ca.po  fr.po  (+2 more)
setup/_metapackage/: VERSION.txt  pyproject.toml  setup.py
(+1640 files in other folders)
